--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -b",
     "start": "node dist/index.js",
     "dev": "pnpm run build && pnpm run start",
-    "test": "vitest"
+    "test": "vitest",
+    "test:integration": "./src/tests/scripts/run-integration.sh"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,9 @@
   "dependencies": {
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/axios": "^0.14.4",
     "@types/express": "^5.0.5",
+    "axios": "^1.13.2",
     "express": "^5.1.0",
     "vitest": "^4.0.13"
   }
